Fix and refine Phase 3 implementation with comprehensive testing
Co-authored-by: shinyay <3072734+shinyay@users.noreply.github.com>